tests/snapshots/snapshot_fixtures__stdlib__stdlib__atexit.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/atexit.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[5] = "main" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "first" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[7] = "second" [cir_private, default, align 1, dso_local, constant]

fn atexit(%arg0: (() -> void)*) -> s32i [external, c, nothrow];
fn first() -> void [internal, c, no_inline, dso_local, nothrow] {
    %14 = get_global @.str.1 : s8i[6]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = call @puts(%15) : s32i [all]
    return
}
fn second() -> void [internal, c, no_inline, dso_local, nothrow] {
    %11 = get_global @.str.2 : s8i[7]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = call @puts(%12) : s32i [all]
    return
}
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @first : (() -> void)*
    %3 = call @atexit(%2) : s32i [all]
    %4 = get_global @second : (() -> void)*
    %5 = call @atexit(%4) : s32i [all]
    %6 = get_global @.str : s8i[5]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = call @puts(%7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
