tests/snapshots/snapshot_fixtures__stdlib__stdlib__atoll.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/atoll.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "%lld\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[11] = "9876543210" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn atoll(%arg0: s8i*) -> s64i [external, c, pure, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[6]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = get_global @.str.1 : s8i[11]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = call @atoll(%6) : s64i [pure]
    %8 = call @printf(%4, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
