tests/snapshots/snapshot_fixtures__stdlib__stdlib__getenv.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/getenv.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[23] = "SLATE_STDLIB_ENV_PROBE" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = "missing" [cir_private, default, align 1, dso_local, constant]

fn getenv(%arg0: s8i*) -> s8i* [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "v", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @.str : s8i[23]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @getenv(%4) : s8i* [all]
    store %5, %1, align 8
    %6 = load %1 : s8i*, align 8
    %7 = cast(ptr_to_bool) %6 : bool
    %8 = ternary %7 ? { : s8i*
        %14 = load %1 : s8i*, align 8
        yield %14
    } : {
        %12 = get_global @.str.1 : s8i[8]*
        %13 = cast(array_to_ptrdecay) %12 : s8i*
        yield %13
    }
    %9 = call @puts(%8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
